--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     font-family: 'Roboto Slab', serif;
+    /* font-family: 'Roboto Slab', serif;
+    font-family: 'Open Sans', sans-serif; */
 }
 
 .container-box {
